# google_takeout_parser

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
google_takeout_parser/: __main__.py  http_allowlist.py  log.py  merge.py  models.py  parse_csv.py  parse_json.py  path_dispatch.py  time_utils.py
google_takeout_parser/locales/: common.py  en.py  main.py
google_takeout_parser/parse_html/: activity.py  comment.py  html_time_utils.py
split_html/: go.mod
tests/: test_google_takeout.py  test_json.py  test_split_html.py  test_types.py
