[project]
name = "google_takeout_parser"
version = "0.1.13"
description = "Parses data out of your Google Takeout (History, Activity, Youtube, Locations, etc...)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "purarue" }]
keywords = ["google", "data", "parsing"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "IPython",
  "beautifulsoup4>=4.9.0",
  "cachew>=0.16.20240129",
  "click>=8.1",
  "logzero>=1.7.0",
  "lxml>=4.6.0",
  "platformdirs>=2.3.0",
  "pytz>=2021.3",
]

[project.urls]
Homepage = "https://github.com/purarue/google_takeout_parser"

[project.optional-dependencies]
optional = ["orjson"]
testing = ["flake8", "mypy", "pytest", "types-beautifulsoup4", "types-pytz"]

[project.scripts]
google_takeout_parser = "google_takeout_parser.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
  "google_takeout_parser",
  "google_takeout_parser.parse_html",
  "google_takeout_parser.locales",
]
exclude = ["tests", "split_html"]

[tool.mypy]
pretty = true
show_error_context = true
show_error_codes = true
check_untyped_defs = true
namespace_packages = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "--doctest-modules google_takeout_parser -vv ./tests/"
